[project]
name = "marljax"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "roku36", email = "roku36000@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "wheel>=0.41.3",
    "ml-dtypes==0.2.0",
    "jax-metal>=0.0.4",
    "jaxmarl>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
